Added cancel button for user registeration

--- a/angularjs/src/app/dialog/dialog.component.html
+++ b/angularjs/src/app/dialog/dialog.component.html
@@ -28,5 +28,6 @@
 </div>
 
 <div mat-dialog-action [align]="'end'">
-    <button  mat-raised-button (click)="addUser()" color="primary">Save</button>
+    <button style="margin:5px;" mat-raised-button (click)="addUser()" color="primary">Save</button>
+    <button style="margin:5px;" mat-raised-button (click)="cancel()" color="primary">Cancel</button>
 </div>
